# ot-harjoitustyo

./: .gitignore  README.md
SalaryTool/: .profile  .pylintrc  pyproject.toml  tasks.py
SalaryTool/config/: config.cfg
SalaryTool/dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
SalaryTool/src/: index.py
SalaryTool/src/calculations/: config_checks.py  holiday_payment.py  montly_salary_to_daily.py  part_time_calculation.py  tax_calculation.py  yearly_holidays_to_monthly.py
SalaryTool/src/formatting/: format.py  output.py  pdf_output.py
SalaryTool/src/output/: README.md
SalaryTool/src/tests/: format_test.py  holiday_payment_test.py  montly_salary_to_daily_test.py  part_time_calculation_test.py  tax_calculation_test.py  yearly_holidays_to_monthly_test.py
SalaryTool/src/ui/: ui.py  ui_defs.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: .coverage  .coveragerc  pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: .coverage  maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
